resolved navbar z-index problem

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,6 @@
     overflow: hidden;
     background-color: #333;
     font-size: 20px;
-    position: relative;
 }
 .active{
     background-color: rgb(107, 148, 230);
@@ -79,14 +78,12 @@ input[type="image"]{
 @media screen and (max-width: 700px) {
     .navbar li, li a, .dropdown-content,.search-bar input{
         width: 100%;
-        z-index: 1;
     }
     .search-bar{
         display: flex;
         flex-direction: column;
         height: auto;
         transition:  0.5s ease-out;
-
     }
     
 }
